--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,16 +4,22 @@
 	margin: 0px;
 }
 
-
+.fuente{ /* Para las criticas */
+	font-family: Times New Roman, sans-serif;
+}
 
 body{
-	font-family: sans-serif;
+
+	font-family: Helvetica, sans-serif;
 	margin: 0;
 	background-image: url(../imagenes/fondofinal.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 	max-width: 1300px;
+	display: grid;
+	min-height: 100vh;
+	grid-template-rows: auto 1fr auto;
 
 }
 
@@ -21,7 +27,6 @@ a{
 	text-decoration: none;
 	color: black;
 }
-
 
 header{
 	display: flex;
@@ -49,209 +54,250 @@ header{
 	border-radius: 5px;
 }
 
+a span{color: darkred;}
 
 h1{
 	text-align: center;
-	margin-top: 1.5em;
+	margin-top: 0.5em;
 	margin-bottom: 1.5rem;
+	font-size: 40px;
 }
 
 .subtitulos{
-
 	margin-top: 1.5em;
 	margin-bottom: 1.5rem;
 }
 
-
+h2{
+	margin-bottom: 10px;
+}
+h3{
+	padding-top: 5px;
+	margin-bottom: 10px;
+}
 
 nav a{
 	font-weight: 600;
 	padding-right: 10px;
 }
 
-
 .encabezado{
 	list-style: none;
 	display: flex;
 	justify-content: right;
-
-
 }
-
-
 
 .encabezado > li > a{
 	display: block;
 	padding: 20px 20px;
 	color: black;
 	text-decoration: none;
-
-	
-
+	text-transform: uppercase;
 }
 
 .encabezado li:hover{
 	background-color: #f1666d;
 	border-radius: 10px;
-
-
-}
-.encabezado-vertical{
-	position: absolute;
-	display: none;
-	list-style: none;
-	width: 200px;
-	background-color: #f1666d;
 }
 
-.encabezado li:hover .encabezado-vertical{
-	display: block;
-	border-radius: 10px;
-
-}
-.encabezado-vertical li:hover{
-	background-color: #dc143c;
-}
-
-.encabezado-vertical li a{
-	display: block;
-	color: black;
-	padding: 15px 15px 15px 20px;
-
-
-
-}
 
 .portadaimg{
- width: 400px;
+ width: 600px;
+ height: 400px;
  border-radius: 10px;
- margin-left: 30px;
  margin-bottom: 10px;
-  }
+ }
 
+
+
+
+/*                       CLASES PARA LOS ARTICLE                        */
 .principal{ 
+
 	margin-bottom: 10%;
 	margin-top: 5%;
-	padding-right: 12%;
-	padding-left: 12%;
+	padding-right: 10%;
+	padding-left: 10%;
 }
 
 .secundario{
  	margin-bottom: 10%;
 	margin-top: 5%;
-	padding-right: 12%;
-	padding-left: 12%;
+	padding-right: 10%;
+	padding-left: 10%;
 
 }
 
 .tercero{ 
 	margin-bottom: 10%;
 	margin-top: 5%;
-	padding-right: 12%;
-	padding-left: 12%;
+	padding-right:10%;
+	padding-left: 10%;
  }
 
-.icon{ display: none;}
+
+ /*                   FIN DE CLASES PARA LOS ARTICLE                     */
+
+/*                      FIN DE CLASES PARA LOS ARTICLE                  */
+
+.icon{ display: none;} /*para ocultar el menu hamburguesa*/
 
 
-.pie-pagina{
+
+
+
+/*                                 FOOTER                             */
+
+footer{
 	display: flex;
 	background-color: #ffcdd8;
-	border-bottom: solid 1px #fff;
+	/*border-bottom: solid 1px #fff;*/
 	border-radius: 15%;
 	border-bottom-left-radius: 0% ;
 	border-bottom-right-radius: 0%;
-	padding-left: 315px;
+	padding-left: 350px;
+}
 
+footer div p{
+	margin-left: -55px;
 }
 
 .red{
 	width: 35px;
-	margin: 30px;
-	
+	margin: 15px;
 	max-width: 2.5rem;
 	margin-right: 1.5rem;
-	
-
-
 }
-article{
-	background-color: #fff0f3;
 
-	margin-left: 150px;
-	margin-right: 150px;
+
+/*                               FIN DE FOOTER                         */
+
+
+
+article{
+	background-color: #fff;
+	margin-left: 100px;
+	margin-right: 100px;
 	border-radius: 15px;
 	padding: 15px 0px 15px 0px;
 	margin-bottom: 10%;
 	margin-top: 5%;
 }
-.libro{
-	width: 180px;
+
+
+.libro{ /*Para el article de informacion de la serie*/
+	width: 200px;
+	height: 185px;
 	border-radius: 10px;
+	margin-right: 20px;
+}
+
+.efecto-libro{
+	width: 165px;
+	height: 210px;
+	float: left;
+}
+
+
+
+
+
+/*                              IMAGENES A CERDA  DE                      */
+
+.albert{
+	display: flex;
 }
 
 .musica{
 	width: 200px;
+	height: 215px;
 	border-radius: 10px;
+
 }
 
+
+.efecto-musica{
+	
+	width: 240px;
+	height: 300px;
+	float: left;
+
+}
+
+
+
+
+
+
 .autor{
-	width: 350px;
-	padding-left: 100px;
+	width: 190px;
+	height: 180px;
+	padding-left: 10px;
+	margin-right: 30px;
+	border-radius: 10px;
 }
 
 
 .biografia{
-	width: 200px;
+	width: 150px;
+	height: 160px;
 	border-radius: 10px;
-	margin-left: 120px;
+	margin-bottom: 15px;
+	margin-right: 75px;
+	
 }
 
 
+.biografia-filas{
+	display: flex;
+}
+
+/*                               FIN IMAGENES A CERCA DE                */
 
 
 
+
+.blanco{
+	color: white;
+	
+}
 .secundario div {
 	display: flex;
 
 }
-.secundario div p{
-	padding-left: 10px;
-}
 
-.tercero div .primera-temp {
-	display: flex;
-}
+.secundario div p{padding-left: 20px;}
+
+.tercero div .primera-temp {display: flex;}
 
 .tercero div .primera-temp img{
 	width: 400px;
 	height: 150px;
 	border-radius: 10px;
-	
+	margin-bottom: 10px;
+	margin-left: 10px;
 }
+
 .tercero div .segunda-temp img{
 	border-radius: 10px;
+	margin-bottom: 15px;
+	margin-left: 50px;
 }
 
-h3{
-	padding-top: 5px;
-	margin-bottom: 1rem;
-}
 
 .tercero div p{
-	padding-right: 30px;
+	padding-right: 10px;
 }
 
-.img-personaje{
-	width: 400px;
-	border-radius: 10px;
-	margin-left: 40px;
- 
 
-}
-article div a img{
-	width: 300px;
-	height: 200px;
+
+
+
+/* imagenes de galeria */
+
+article div a img{ 
+	width: 220px;
+	height: 150px;
 	display: inline-flex;
 	margin-left: 30px;
 	padding: 10px;
@@ -259,19 +305,31 @@ article div a img{
 	align-content: space-around;
 	border-radius: 15px;
 
+    
+    	grid-template-columns: repeat(3, 1fr);
+
 }
 
+
+
+/*                                 CONTATO                             */
+
 .form{
-	width:100%;
+	width:400px;
 	height:440px;
-	background:#e6e6e6;
+	background:#fce4ec;
 	border-radius:8px;
-	box-shadow:0 0 40px -10px #000;
+
+	border-bottom-right-radius: 0px;
+	border-top-right-radius: 0px;
+
+	/*box-shadow:0 0 30px -10px #000;*/
 	margin:calc(1vh) auto;
-	padding:10px 30px;
+	padding:0px 50px;
 	box-sizing:border-box;
 	font-family:'Montserrat',sans-serif;
 	font-size: 14px;
+
 
 	
 }
@@ -280,8 +338,8 @@ h3.contacto{
 	margin:10px 0;
 	padding-bottom:10px;
 	width:150px;
-	color:#78788c;
-	border-bottom:3px solid #78788c;
+	color:#f1666d;
+	border-bottom:3px solid #ff4d6d;
 	font-size: large;
 }
 
@@ -295,7 +353,7 @@ input{
 	resize:none;
 	border:0;
 	transition:all .3s;
-	border-bottom:2px solid #bebed2
+	border-bottom:2px solid #ff4d6d
 }
 
 input:focus{
@@ -312,7 +370,7 @@ button{
 }
 
 button:hover{
-	background:#78788c;
+	background:#f1666d;
 	color:#fff;
 }
 
@@ -320,13 +378,13 @@ div.pie_contacto{
 	position: relative;
 	bottom:-15px;
 	right:30%;
-	background:#50505a;
+	background:#f1666d;
 	color:#fff;
 	width:420px;
 	padding:16px 4px 16px 0;
 	border-radius:6px;
 	box-shadow:10px 10px 40px -14px #000;
-	margin-left: 115px;
+	margin-left: 150px;
 }
 
 div.pie_contacto span{
@@ -334,50 +392,104 @@ div.pie_contacto span{
 }
 
 
+.img-contacto{
+	width: 210px;
+	margin-right: 10px;
+	height: 440px;
+	margin-top: 7px;
+	border-radius: 8px;
+	/*box-shadow:0 0 30px -10px #000;*/
+	border-bottom-left-radius: 0px;
+	border-top-left-radius: 0px;
 
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 480px) { 
-header{
-
+.contorno{
 	display: flex;
-	justify-content: space-around;
-	min-height: 100px;
-	background-color: #ffcdd8;
+}
+
+
+/*                               FIN CONTACTO                            */
+
+
+
+
+
+/*                               PERSONAJES                               */
+
+.img-personaje{
+	width: 400px;
+	border-radius: 10px;
+	margin-left: 90px;
+
+}
+
+.animacion{
+	width: 210px;
+	height: 150px;
+	transition: transform 0.3s ease;
+}
+.animacion:hover {transform: scale(1.05);}
+
+.filas{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Tres columnas de igual ancho */
+    /* Espacio entre las imágenes */
+}
+
+#lleo {  scroll-margin-top: 100px; }
+
+#jordi {scroll-margin-top: 100px; }
+
+#cristina{  scroll-margin-top: 100px; }
+
+#tony { scroll-margin-top: 100px; }
+
+#ignasi { scroll-margin-top: 100px; }
+
+#roc{ scroll-margin-top: 100px; }
+
+
+/*                              FIN PERSONAJES                             */
+
+
+p{margin-bottom: 10px;}
+
+p a{color: darkblue;}
+
+p a:hover {color: skyblue;}
+
+div .espacio{
+	padding-bottom: 30px;
+}
+
+
+
+.texto{
+	text-overflow: none;
+}
+
+
+
+
+
+/*ADAPTACION MOVIL*/
+
+@media (max-width: 480px) {
+body {
+    max-width: 100%; 
+    padding: 0; 
+}
+
+header{
 	align-items: center;
-	padding: 10px;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	background-color: #ffcdd8;
 	position: sticky;
 	top: 0;
-	border-bottom: solid 1px #fff;
-	border-radius: 15%;
-	border-top-left-radius: 0% ;
-	border-top-right-radius: 0%;
 	z-index: 1;
-	flex-wrap: wrap;
-
+	align-items: flex-start ;
 }
 header div, header a {
 	flex: 1 0 50%;
@@ -389,8 +501,8 @@ header nav {
 	display: block;
 	padding-right: 0.6rem;
 	text-align: right;
-}
 
+ }
 nav ul {
 	display: none;
 }
@@ -402,68 +514,275 @@ nav.responsive ul li {
 	text-align: center;
 	padding: 0.5rem;
 }
-nav.responsive ul li a {
-	padding-right: 0;
-}
 
+nav.responsive ul li a {
+   padding-right: 0;
+}
 
 .encabezado{
 	display: none;
 }
 
-.icon:hidden .encabezado-vertical{
+
+
+.logo img {
+        height: 40px; 
+}
+
+h1 {
+        font-size: 28px; 
+}
+
+h3{
+	margin-bottom: 10px;
+	margin-top: 30px;
+}
+
+
+
+article {
+        margin-left: 10px; 
+        margin-right: 10px;
+}
+
+.portadaimg {
+        width: 100%; 
+        height: auto; 
+}
+
+
+
+
+
+/*                              FORMULARIO CONTACTO                         */
+.form {
+	width: 220px;
+        height: 400px; 
+        padding: 10px; 
+
+
+}
+
+input {
+        font-size: 14px; /* Ajustar tamaño de fuente para inputs */
+}
+
+button {
+        width: 100%; /* Botón a ancho completo */
+}
+
+
+div.pie_contacto{
+
+	margin-left: 30px;
+}
+
+.img-contacto {
+        width: 150px; /* Ancho completo */
+        height: 400px /* Mantener proporciones */
+        
+    }
+
+.contorno{
+	padding-bottom: 40px;
+}
+
+
+
+
+
+/*                        FIN FORMULARIO CONTACTO                          */
+
+
+
+
+.animacion {
+        width: 100%; 
+        height: auto; 
+}
+
+.img-personaje {
+        max-width: 290px; 
+        margin-left: 45px;
+        }
+
+.filas {
+        grid-template-columns: repeat(2, 1fr); 
+        max-width: 350px;
+        margin-left: 30px;
+}
+
+.primera-temp {
+	display: none;
+}
+#lleo {  scroll-margin-top: 100px; }
+
+#jordi {scroll-margin-top: 100px; }
+
+#cristina{  scroll-margin-top: 100px; }
+
+#tony { scroll-margin-top: 100px; }
+
+#ignasi { scroll-margin-top: 100px; }
+
+#roc{ scroll-margin-top: 100px; }
+
+
+
+
+.tercero div .primera-temp {	
+	flex-wrap: wrap-reverse;
+}
+
+.libro{
+	max-width: 150px;
+	border-radius: 10px;
+}
+
+.texto{
+	
+	text-overflow: hidden;
+	max-width: 250px;
+}
+
+.blanco{
 	display: none;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-section{
-	max-width: 480px;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
+.tercero div .primera-temp img{
+	width: 400px;
+	height: 200px;
+	border-radius: 10px;
+	margin-bottom: 10px;
+	margin-left: 0px;
 }
-.principal{
-	height: 250px;
-	padding: 10%;
+
+.tercero div .segunda-temp img{
+	border-radius: 10px;
+	margin-bottom: 15px;
+	max-width: 370px;
+	margin-left: 0px;
+
 }
-.secundario{
-	margin-top: 1%;
+
+
+.tercero div p{
+	padding-right: 5px;
+	padding-bottom: 10px;
+}
+
+
+article div a img{ /*para imagenes de galeria*/
+	width: 190px;
+	height: 150px;
+	display: inline-flex;
+	margin-left: 20px;
+	padding: 10px;*/
+	
+	align-content: space-around;
+	border-radius: 15px;
+
+    
+    	grid-template-columns: repeat(3, 1fr);
+
+
+}
+
+
+
+/*                                 A CERDA  DE                          */
+
+.albert{
+	display: flex;
+}
+
+.musica{
+
+	width: 230px;
+	height: 200px;
+	border-radius: 10px;
+	margin-right: 10px;
+
+}
+
+.efecto-musica{
+	width: 170px;
+	height: 210px;
+	float: left;
+	shape-outside: circle(120%);
+
+}
+
+
+.autor{
+	width: 150px;
+	height: 180px;
+	padding-left: 10px;
+	margin-right: 10px;
+}
+
+
+.biografia{
+	width: 240px;
+	height: 220px;
+	margin-left: 60px;
+	border-radius: 8px;
+	margin-bottom: 5px;
+	
+}
+
+.biografia-filas{
 	display: block;
 }
-.secundario div{
-	margin-right: auto;
-	margin-left: auto;
-	width: 90%;
+
+ 
+div .espacio{
+	padding-bottom: 50px;
 }
-.secundario div a img{
-	margin-bottom: 1rem;
+/*                             FIN A CERCA DE                         */
+
+
+
+
+.libro{
+
+	width: 140px;
+	height: 200px;
+	border-radius: 10px;
+	margin-right: 15px;
+
 }
-h2{
-	font-size: 1rem;
+
+.efecto-libro{
+	width: 150px;
+	height: 210px;
+	float: left;
+	shape-outside: circle(90%);
 }
-h4{
-	font-size: 1rem;
+
+
+
+
+footer {
+    
+     bottom: 0;    
+     left: 0; 
+     right: 0; 
+     padding: 10px; 
+     text-align: center; 
+     background-color: #ffcdd8; 
 }
-footer{
-	height: 80px;
-	justify-content: space-evenly;
+
+footer div p{
+	margin-left: 20px;
 }
-footer img{
-	max-width: 3rem;
+.red {
+    width: 30px; 
+    margin: 0 5px; 
 }
+
+
+
 }
+/*FIN ADAPTACION MOVIL*/
